# taskflowai

./: .gitignore  LICENSE  README.md  __init__.py  agent.py  calculator_agent.py  github_issue_team.py  llm.py  pyproject.toml  requirements.txt  research_agent.py  research_pipeline.py  task.py  tools.py  translate_news_pipeline.py  travel_agent.py  utils.py
knowledgebases/: __init__.py  faiss_knowledgebase.py
taskflowai/: __init__.py  agent.py  llm.py  task.py  tasks.py  tools.py  utils.py
taskflowai/knowledgebases/: __init__.py  faiss_knowledgebase.py  pinecone_knowledgebase.py
taskflowai/tools/: __init__.py  amadeus_tools.py  audio_tools.py  calculator_tools.py  conversation_tools.py  csv_tools.py  embedding_tools.py  faiss_tools.py  file_tools.py  fred_tools.py  github_tools.py  langchain_tools.py  markdown_tools.py  matplotlib_tools.py  pinecone_tools.py  semantic_splitter.py  sentence_splitter.py  text_splitters.py  web_tools.py  wikipedia_tools.py  yahoo_finance_tools.py
tools/: __init__.py  audio_tools.py  calculator_tools.py  conversation_tools.py  embedding_tools.py  fred_tools.py  langchain_tools.py  matplotlib_tools.py  pinecone_tools.py  sentence_splitter.py  text_splitters.py  yahoo_finance_tools.py
